--- a/trunk/projeto/GBF.cbp
+++ b/trunk/projeto/GBF.cbp
@@ -13,10 +13,17 @@
 				<Option compiler="gcc" />
 				<Option projectResourceIncludeDirsRelation="2" />
 				<Compiler>
+					<Add option="-Os" />
+					<Add option="-O3" />
+					<Add option="-O2" />
+					<Add option="-O1" />
+					<Add option="-O" />
 					<Add option="-W" />
 					<Add option="-Wall" />
-					<Add option="-DGNU_LINUX" />
 				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
 			</Target>
 			<Target title="win32 - release">
 				<Option output="bin/win32/release/libGBF.a" prefix_auto="0" extension_auto="0" />
@@ -25,9 +32,17 @@
 				<Option compiler="gcc" />
 				<Option projectResourceIncludeDirsRelation="2" />
 				<Compiler>
+					<Add option="-Os" />
+					<Add option="-O3" />
+					<Add option="-O2" />
+					<Add option="-O1" />
+					<Add option="-O" />
 					<Add option="-W" />
 					<Add option="-Wall" />
 				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
 			</Target>
 			<Target title="linux - debug">
 				<Option output="bin/linux/debug/libGBF.a" prefix_auto="0" extension_auto="0" />
@@ -40,7 +55,6 @@
 					<Add option="-Wall" />
 					<Add option="-pg" />
 					<Add option="-g" />
-					<Add option="-DGNU_LINUX" />
 					<Add option="-DDEBUG" />
 				</Compiler>
 				<Linker>
@@ -62,6 +76,7 @@
 					<Add option="-DDEBUG" />
 				</Compiler>
 				<Linker>
+					<Add option="-pg" />
 					<Add option="-pg -lgmon" />
 				</Linker>
 			</Target>
@@ -127,6 +142,10 @@
 		<Unit filename="src/ParticleSystemEfeitoEsferico.h" />
 		<Unit filename="src/ParticleSystemManager.cpp" />
 		<Unit filename="src/ParticleSystemManager.h" />
+		<Unit filename="src/ParticleSystemPixel.cpp" />
+		<Unit filename="src/ParticleSystemPixel.h" />
+		<Unit filename="src/ParticleSystemSprite.cpp" />
+		<Unit filename="src/ParticleSystemSprite.h" />
 		<Unit filename="src/PersonagemAbstract.cpp" />
 		<Unit filename="src/PersonagemAbstract.h" />
 		<Unit filename="src/PersonagemAutomatico.cpp" />
