--- a/trunk/projeto/GBF.cbp
+++ b/trunk/projeto/GBF.cbp
@@ -193,6 +193,10 @@
 		<Unit filename="src/TopSystemRecordeLista.cpp" />
 		<Unit filename="src/TopSystemRecordeLista.h" />
 		<Unit filename="src/UserInterface.h" />
+		<Unit filename="src/UserInterfaceBotao.cpp" />
+		<Unit filename="src/UserInterfaceBotao.h" />
+		<Unit filename="src/UserInterfaceComponente.cpp" />
+		<Unit filename="src/UserInterfaceComponente.h" />
 		<Unit filename="src/UserInterfaceMenuAbstract.cpp" />
 		<Unit filename="src/UserInterfaceMenuAbstract.h" />
 		<Unit filename="src/UserInterfaceMenuItemAbstract.cpp" />
@@ -203,10 +207,22 @@
 		<Unit filename="src/UserInterfaceMenuTexto.h" />
 		<Unit filename="src/UserInterfaceMenuTextoTransparente.cpp" />
 		<Unit filename="src/UserInterfaceMenuTextoTransparente.h" />
+		<Unit filename="src/UserInterfaceObjetoTexto.cpp" />
+		<Unit filename="src/UserInterfaceObjetoTexto.h" />
 		<Unit filename="src/UserInterfaceRecorde.cpp" />
 		<Unit filename="src/UserInterfaceRecorde.h" />
 		<Unit filename="src/UserInterfaceTexto.cpp" />
 		<Unit filename="src/UserInterfaceTexto.h" />
+		<Unit filename="src/UserInterfaceVisual.cpp" />
+		<Unit filename="src/UserInterfaceVisual.h" />
+		<Unit filename="src/UserInterfaceVisualImagem.cpp" />
+		<Unit filename="src/UserInterfaceVisualImagem.h" />
+		<Unit filename="src/UserInterfaceVisualSolido.cpp" />
+		<Unit filename="src/UserInterfaceVisualSolido.h" />
+		<Unit filename="src/UserInterfaceWindow.cpp" />
+		<Unit filename="src/UserInterfaceWindow.h" />
+		<Unit filename="src/UserInterfaceWindowTitulo.cpp" />
+		<Unit filename="src/UserInterfaceWindowTitulo.h" />
 		<Unit filename="src/UtilColor.cpp" />
 		<Unit filename="src/UtilColor.h" />
 		<Unit filename="src/UtilDate.cpp" />
