Refatoramento do projeto, para resolver o problema de confusão de nomes, português-inglês. O projeto terá suas classes e métodos em inglês.

--- a/projeto/GBF.cbp
+++ b/projeto/GBF.cbp
@@ -257,9 +257,20 @@
 		<Unit filename="src/UserInterface.h" />
 		<Unit filename="src/WriteManager.cpp" />
 		<Unit filename="src/WriteManager.h" />
+		<Unit filename="src/version.h">
+			<Option target="win32 - release" />
+			<Option target="linux - debug" />
+			<Option target="win32 - debug" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<AutoVersioning>
+				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="1000" />
+				<Settings autoincrement="1" date_declarations="0" do_auto_increment="1" ask_to_increment="0" language="C++" svn="1" svn_directory="/home/desenvolvimento/pjmoo-gbf/trunk/projeto/src/.svn" header_path="src/version.h" />
+				<Changes_Log show_changes_editor="1" app_title="released version %M.%m.%b of %p (%T)" changeslog_path="ChangesLog.txt" />
+			</AutoVersioning>
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
